# axum-graph-sea

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: db.rs  lib.rs
api/src/graphql/mutation/: note.rs
api/src/graphql/query/: note.rs
core/: Cargo.toml
core/src/: mutation.rs  query.rs
core/tests/: mock.rs
entity/: Cargo.toml
entity/src/: lib.rs  note.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
