[package]
name = "axum-graph-sea"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "core", "entity", "migration"]

[dependencies]
axum-graph-sea-api = { path = "api" }
