[package]
name = "axum-graph-sea-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum-graph-sea-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.5.1"
dotenvy = "0.15.0"
async-graphql-axum = "4.0.6"
entity = { path = "../entity" }
migration = { path = "../migration" }
